<resources>
    <string name="app_name">MeBike</string>
    <string name="messages">Messages:</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="no_messages">No messages sent!</string>
    <string name="no_bluetooth">Bluetooth not available.</string>
    <string name="device_name_format">Device: %1$s</string>
    <string name="status_connecting">Status: Connecting</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_failed">Connection Failed.</string>
    <string name="bluetooth_unavailable">Connection Failed.</string>
    <string name="message_send_error">Error sending message!</string>
    <string name="you_sent">You</string>
    <string name="speed_label">Speed</string>
    <string name="distance_label">Trip Distance</string>
    <string name="pitch_label">Pitch / Acceleration</string>
    <string name="pulse_label">Pulse</string>
    <string name="temperature_label">Temperature</string>
    <string name="rpm_value">Pedal speed</string>
    <string name="gps_label">GPS</string>
    <string name="calorie_label">Score</string>
    <string name="trip_time_label">Trip duration</string>
    <string name="login_button">Login</string>
    <string name="server_url">207.180.247.98:8080</string>
    <string name="startBtn">Start</string>
    <string name="stopBtn">Stop</string>
    <string name="title_activity_tour_overview">TourOverview</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="pulse">Avarege pulse</string>
    <string name="time">Tour duration</string>
    <string name="tourOverview">Tour Overview</string>
    <string name="distance">Tour distance</string>
    <string name="avrgSpeed">Average Speed</string>
    <string name="maxPitch">Maximum Pitch</string>
    <string name="avrgRPM">Average RPM</string>


</resources>